@@ -111,7 +111,14 @@ if [ -z "${DATA}" ]; then
 	constance* | node* ) DATA='/scratch' ; ;; # PNNL
 	cooley* | cc[0123456789][0123456789][0123456789] ) DATA="/projects/OceanClimate_2/${USER}" ; ;; # ALCF cooley compute nodes named ccNNN, 384 GB/node 
 	frontier* ) DATA="/lustre/orion/cli115/world-shared/${USER}" ; ;; # OLCF frontier compute nodes named frontier01276 64|512 cores|GB/node
-	perlmutter* | login[0123456789][0123456789] | nid[0123456789][0123456789][0123456789][0123456789][0123456789][0123456789] ) DATA="${SCRATCH}" ; ;; # NERSC perlmutter compute nodes named nidNNNNNN (CPU) with (64)|(512) cores|GB/node (cpu) (login nodes 512 GB)
+	login[0123456789][0123456789] ) # 20230831 Frontier and Perlmutter login nodes share this name :(
+	    if [ "${LMOD_SYSTEM_NAME}" = 'frontier' ]; then
+		DATA="/lustre/orion/cli115/world-shared/${USER}"
+	    elif [ "${LMOD_SYSTEM_NAME}" = 'perlmutter' ]; then
+		DATA="${SCRATCH}"
+	    fi # !LMOD_SYSTEM_NAME
+	    ;; # !login	
+	perlmutter* | nid[0123456789][0123456789][0123456789][0123456789][0123456789][0123456789] ) DATA="${SCRATCH}" ; ;; # NERSC perlmutter compute nodes named nidNNNNNN (CPU) with (64)|(512) cores|GB/node (cpu) (login nodes 512 GB)
 	theta* ) DATA="/projects/ClimateEnergy_3/${USER}" ; ;; # ALCF theta compute nodes named fxm, 64|192 cores|GB/node 
 	* ) DATA='/tmp' ; ;; # Other
     esac # !HOSTNAME
@@ -188,7 +195,31 @@ if [ "${hrd_pth}" = 'Yes' ] && [ "${NCO_PATH_OVERRIDE}" = 'Yes' ]; then
 	frontier* )
             export PATH='/ccs/home/zender/bin_frontier:/ccs/home/zender/anaconda/bin'\:${PATH}
 	    export LD_LIBRARY_PATH='/ccs/home/zender/lib_frontier:/ccs/home/zender/anaconda/lib'\:${LD_LIBRARY_PATH} ; ;;
-	perlmutter* | login[0123456789][0123456789] | nid[0123456789][0123456789][0123456789][0123456789][0123456789][0123456789] )
+	login[0123456789][0123456789] ) # 20230831 Frontier and Perlmutter login nodes share this name :(
+	    if [ "${LMOD_SYSTEM_NAME}" = 'frontier' ]; then
+		export PATH='/ccs/home/zender/bin_frontier:/ccs/home/zender/anaconda/bin'\:${PATH}
+		export LD_LIBRARY_PATH='/ccs/home/zender/lib_frontier:/ccs/home/zender/anaconda/lib'\:${LD_LIBRARY_PATH}
+	    elif [ "${LMOD_SYSTEM_NAME}" = 'perlmutter' ]; then
+		# 20221103 Add build environment modules
+		module load PrgEnv-gnu
+		module load gcc/11.2.0
+		module load cray-hdf5/1.12.2.1
+		module load cray-netcdf/4.9.0.1
+		module load gsl
+		if [ ${spt_nm} = 'ncremap' ]; then
+		    MOAB_ROOT=/project/projectdirs/e3sm/software/moab
+		    TEMPESTREMAP_ROOT=/project/projectdirs/e3sm/software/tempestremap
+		    E3SMU_ROOT='/global/common/software/e3sm/anaconda_envs/base/envs/e3sm_unified_latest'
+		fi # !ncremap
+		if [ -n "${NCARG_ROOT}" ]; then
+		    export PATH="${PATH}:${NCARG_ROOT}/bin"
+		    export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:${NCARG_ROOT}/lib"
+		fi # !NCARG_ROOT
+		export PATH='/global/homes/z/zender/bin_perlmutter'\:${PATH}
+		export LD_LIBRARY_PATH='/global/homes/z/zender/lib_perlmutter'\:${LD_LIBRARY_PATH}
+	    fi # !LMOD_SYSTEM_NAME
+	    ;; # !login	
+	perlmutter* | nid[0123456789][0123456789][0123456789][0123456789][0123456789][0123456789] )
 	    # 20221103 Add build environment modules
 	    module load PrgEnv-gnu
 	    module load gcc/11.2.0
@@ -493,7 +524,9 @@ bch_pbs='No' # [sng] PBS batch (non-interactive) job
 bch_slr='No' # [sng] SLURM batch (non-interactive) job
 bnr_flg='No' # [sng] Binary method
 caseid='' # [sng] Case ID
-caseid_xmp='20180129.DECKv1b_piControl.ne30_oEC.edison' # [sng] Case ID for examples
+#caseid_xmp='20180129.DECKv1b_piControl.ne30_oEC.edison' # [sng] Case ID for v1 examples
+caseid_xmp='v2.LR.historical_0101' # [sng] Case ID for v2 examples
+caseid_xmp_eamxx='20230421.F2010-SCREAMv1.ne30pg2_ne30pg2.chrysalis.scream.h0.AVERAGE.nmonths_x1.0001-01-01-00000.nc' # [sng] Case ID for EAMXX examples
 cf_flg='Yes' # [sng] Produce CF climatology attribute?
 clm_flg='Yes' # [sng] Generate climatology
 clm_hfc_or_mth='No' # [sng] Generate monthly output climatology from monthly or HFC input
@@ -647,12 +680,13 @@ function fnc_usg_prn { # NB: dash supports fnc_nm (){} syntax, not function fnc_
     echo "${fnt_rvr}-y${fnt_nrm} ${fnt_bld}rgr_prv${fnt_nrm}  Regridded previous climo directory (default ${fnt_bld}${drc_rgr_prv}${fnt_nrm}) [${fnt_tlc}drc_rgr_prv, drc_prv_rgr, regridded_previous, previous_regridded${fnt_nrm}]"
     echo " ${fnt_bld}--ypf_max${fnt_nrm}  Years-per-output-file maximum (default ${fnt_bld}${ypf_max}${fnt_nrm}) [${fnt_tlc}ypf_max, ypf, years, years_per_file${fnt_nrm}]"
     printf "\n"
-    printf "${fnt_rvr}Examples:${fnt_nrm}\n${fnt_bld}${spt_nm} -c ${caseid_xmp} -s ${yr_srt} -e ${yr_end} -i ${drc_in_xmp} -o ${drc_out_xmp} -r ~zender/data/maps/map_ne30np4_to_fv129x256_aave.20150901.nc ${fnt_nrm}# Generate EAM/CAM climo\n"
-    printf "${fnt_bld}${spt_nm} -c control -m clm2 -s ${yr_srt} -e ${yr_end} -i ${drc_in_xmp} -o ${drc_out_xmp} -r ~zender/data/maps/map_ne30np4_to_fv129x256_aave.20150901.nc ${fnt_nrm}# Generate ELM/CLM climo\n"
-    printf "${fnt_bld}${spt_nm} -P mpasseaice -s ${yr_srt} -e ${yr_end} -i ${drc_in_mps} -o ${drc_out_mps} -r ~zender/data/maps/map_oEC60to30v3_to_cmip6_180x360_aave.20181001.nc ${fnt_nrm}# Generate MPAS-Seaice climo\n"
-    printf "${fnt_bld}${spt_nm} -P mpaso -p mpi -s 1 -e 5 -i ${drc_in_mps} -o ${drc_out_mps} -r ~zender/data/maps/map_oRRS18to6v3_to_cmip6_720x1440_nco.20200601.nc ${fnt_nrm}# Generate MPAS-Ocean climo\n"
-    printf "${fnt_bld}cd output;ls *cam*19??-??*.nc | ${spt_nm} -v FSNT,TREFHT -s 1900 -e 1999 -o ${drc_out_xmp} -r ~zender/data/maps/map_ne30np4_to_fv129x256_aave.20150901.nc ${fnt_nrm}# Split climo\n"
-    printf "${fnt_bld}ncclimo -c ${caseid_xmp} -m cam -S 41 -E 50 -x ${drc_rgr_xmp}/0041-0050 -s 51 -e 60 -i ${drc_rgr_xmp}/0051-0060 -X ${drc_rgr_xmp}/0041-0060 ${fnt_nrm}# Combine two climos\n\n"
+    printf "${fnt_rvr}Examples:${fnt_nrm}\n${fnt_bld}${spt_nm} -c ${caseid_xmp} -s 2013 -e 2014 -i ${drc_in_xmp} -o ${drc_out_xmp} -r ~zender/data/maps/map_ne30pg2_to_cmip6_180x360_nco.20200901.nc ${fnt_nrm}# EAM/CAM climo\n"
+    printf "${fnt_bld}${spt_nm} -P eamxx -v SW_flux_dn@bot,T_2m,wind_speed_10m -c ${caseid_xmp_eamxx} -f foo -s 1 -e 2 -i ${drc_in_xmp} -o ${drc_out_xmp} -r ~zender/data/maps/map_ne30pg2_to_cmip6_180x360_nco.20200901.nc ${fnt_nrm}# EAMXX climo\n"
+    printf "${fnt_bld}${spt_nm} -P elm -m clm2 -c control -s ${yr_srt} -e ${yr_end} -i ${drc_in_xmp} -o ${drc_out_xmp} -r ~zender/data/maps/map_ne30pg2_to_cmip6_180x360_nco.20200901.nc ${fnt_nrm}# ELM/CLM climo\n"
+    printf "${fnt_bld}${spt_nm} -P mpaso -v timeMonthly_avg_activeTracers_temperature -s 1 -e 2 -i ${drc_in_mps} -o ${drc_out_mps} -r ~zender/data/maps/map_oEC60to30v3_to_cmip6_180x360_aave.20181001.nc ${fnt_nrm}# MPAS-Ocean v1 climo\n"
+    printf "${fnt_bld}${spt_nm} -P mpasseaice -v timeMonthly_avg_iceAreaCell -s ${yr_srt} -e ${yr_end} -i ${drc_in_mps} -o ${drc_out_mps} -r ~zender/data/maps/map_oRRS18to6v3_to_cmip6_720x1440_nco.20200601.nc ${fnt_nrm}# MPAS-Seaice v2 climo\n"
+    printf "${fnt_bld}cd output;ls *eam*19??-??*.nc | ${spt_nm} -v FSNT,TREFHT -s 1900 -e 1999 -o ${drc_out_xmp} -r ~zender/data/maps/map_ne30pg2_to_cmip6_180x360_nco.20200901.nc ${fnt_nrm}# EAM timeseries\n"
+    printf "${fnt_bld}ncclimo -c ${caseid_xmp} -S 41 -E 50 -x ${drc_rgr_xmp}/0041-0050 -s 51 -e 60 -i ${drc_rgr_xmp}/0051-0060 -X ${drc_rgr_xmp}/0041-0060 ${fnt_nrm}# Combine two EAM climos\n\n"
 # 20210831: NB: Alternative access to interactive batch queues via, e.g., "salloc -A e3sm --constraint=knl --nodes=1 --time=00:30:00 --job-name=ncclimo" works well everywhere except Compy
     printf "${fnt_rvr}Interactive batch queues:${fnt_nrm}\n"
     printf "andes: srun -A CLI115 --nodes=1 --time=00:30:00 --job-name=ncclimo --pty bash\n"
@@ -662,7 +696,7 @@ function fnc_usg_prn { # NB: dash supports fnc_nm (){} syntax, not function fnc_
     printf "chrys: srun --nodes=1 --time=30 --job-name=ncclimo --pty bash\n" # Compute node
     printf "compy: srun -A e3sm --nodes=1 --time=00:30:00 --job-name=ncclimo --pty bash\n"
     printf "coole: qsub -I -A ClimateEnergy_4 --nodecount=1 --time=00:30:00 --jobname=ncclimo\n"
-    printf "front: srun -A CLI115 --nodes=1 --time=00:30:00 --partition=debug --job-name=ncclimo --pty bash\n"
+    printf "front: salloc -A CLI115 --nodes=1 --time=00:30:00 --job-name=ncclimo --pty bash\n"
     printf "perlm: srun -A e3sm --constraint=cpu --nodes=1 --time=00:30:00 --qos=debug --job-name=ncclimo --pty bash\n"
     printf "\nComplete documentation at http://nco.sf.net/nco.html#${spt_nm}\n\n"
     exit 1
